--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3 class="title">Ebisu</h3>
     <p class="content">스타일 공부중입니다.</p>
     <div class="box">
-        
+        test
     </div>
 </body>
 </html>
