--- a/layout2.html
+++ b/layout2.html
@@ -25,17 +25,66 @@
             incidunt amet!</p>
     </div>
 
-    <br>
+    <div class="form-background">
+        <div class="form-white">
+            <form>
+                <div class="w-100">
+                <h3>Contact Us</h3>
+                <p>Your Email</p>
+                <input class="form-input" type="email" placeholder="email@example.com">
+            </div>
+                <div class="w-50">
+                    <p>First Name</p>
+                    <input type="text">
+                </div>
+                <div class="w-50">
+                    <p>Last Name</p>
+                    <input type="text">
+                </div>
+                <div style="clear:both"></div>
 
-    <div class="body-background" style="padding: 50px;">
-        <h4>How we design our shoes</h4>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet maxime quibusdam ad modi inventore
-            accusamus in facere ducimus saepe quam adipisci dolorum rem temporibus voluptas, possimus itaque aliquam
-            incidunt amet!</p>
+                <div class="w-100">
+                    <p>Message</p>
+                    <textarea class="form-input"></textarea>
+                </div>
+                <div>
+                    <input id="sub" type="checkbox">
+                    <label for="sub">Subscribe</label>
+                    <button class="yellow-button">SEND</button> 
+                </div>
+            </form>
+        </div>
+
     </div>
 
 
 
+
+
+
+
+
+    <div class="input-box">
+        <h2>contact us</h2><br>
+        <p>Your Email</p>
+        <form>
+            <input type="email" placeholder="email@example.com">
+        </form><br>
+        <form>
+            <div class="input-name">
+                <p>First name</p>
+                <p>Last name</p>
+            </div>
+            <input type="text">
+            <input type="text">
+        </form><br>
+        <p>Message</p><br>
+        <textarea class="input-textarea"></textarea><br>
+        <form>
+            <input type="checkbox">S
+            <button>SEND</button>
+        </form>
+    </div>
 </body>
 
 </html>
