--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,7 @@
             <button class="btn">구매하기</button>
         </div>
     </div>
-
+    <!--pseudo-class로 인터랙티브 버튼 만들기 2분까지 봤음-->
     
 </body>
 
