--- a/cart.html
+++ b/cart.html
@@ -44,10 +44,23 @@
                 
             </table>
             <button class="btn">구매하기</button>
+            <input class="input-test">
+            <a href="#" class="custom-link">링크</a><br>
+            <button class="main-btn bg-red ">더알아보기</button>
+            <button class="main-btn bg-blue">구매하기</button>
+        </div>
+
+        <div class="profile">
+            <img class="profile__img">
+            <h4 class="profile__title"></h4>
+            <p class="profile__content"></p>
+            <button class="profile__button">btn1</button>
+            <button class="profile__button">btn2</button>
         </div>
     </div>
-    <!--pseudo-class로 인터랙티브 버튼 만들기 2분까지 봤음-->
+   
     
+
 </body>
 
 </html>
