--- a/layout2.html
+++ b/layout2.html
@@ -10,6 +10,21 @@
 
 <body style="margin: 0px;">
 
+
+    <div class="nav-container">
+        <div class="nav-item">ShoopShop</div>
+        <div style="flex-grow: 1;"></div>
+        <div class="nav-item">Products</div>
+        <div class="nav-item">Sevices</div>
+    </div>
+
+
+
+    <div class="test"></div>
+
+    
+
+
     <div class="main-background">
         <h4 class="main-title">Buy Our Shoes!</h4>
         <p class="main-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, numquam ut? Quos quo
