--- a/layout2.html
+++ b/layout2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./css/main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body style="margin: 0px;">
@@ -20,8 +22,7 @@
 
 
 
-    <div class="test"></div>
-
+   
     
 
 
@@ -33,6 +34,13 @@
         <button class="main-button">Buy now</button>
 
     </div>
+
+
+
+
+
+
+
     <div class="body-background">
         <h4>How we design our shoes</h4>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet maxime quibusdam ad modi inventore
