--- a/qwer.html
+++ b/qwer.html
@@ -33,7 +33,7 @@
         <div class="shop-container">
             <div class="shop-item">
                 <div style="position: relative;">
-                    <div class="overlay"></div>
+                    <div class="overlay"><span>$60</span></div>
                     <img src="./img/product1-1.jpg">
                 </div>
             </div>
